--- a/agentdvr/config.json
+++ b/agentdvr/config.json
@@ -1,6 +1,7 @@
 {
     "name": "Agent DVR",
-    "version": "v0.02.0",
+    "version": "0.02.0",
+
     "slug": "agentdvr",
     "description": "Addon to run AgentDVR with Home Assistant",
     "arch": ["amd64", "i386"],
@@ -33,7 +34,6 @@
     },
     "panel_icon": "mdi:cctv",
     "panel_title": "AgentDVR",
-    "image": "jpeterson37/agentdvr-{arch}",
     "init": true,
     "map": ["config:rw", "media:rw"],
     "watchdog": "tcp://[HOST]:[PORT:8090]"
