--- a/open-weather-radio/config.json
+++ b/open-weather-radio/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Open Weather Radio",
-    "version": "v0.0.5",
+    "version": "0.0.5",
     "slug": "open_weather_radio",
     "description": "Addon to run Open Weather Radio with Home Assistant",
     "url": "https://github.com/JP-Tek-Services/addon-open-weather-radio",
@@ -39,6 +39,5 @@
     "usb": true,
     "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
     "map": [],
-    "image": "jptekservices/addon-open-weather-radio-{arch}",
     "watchdog": "tcp://[HOST]:[PORT:8080]"
   }
